[package]
name = "ygotool"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
viuer = { version = "0.7.1", features = ["sixel"] }
image = "0.24"
lazy_static = "1.4.0"
colored = "3.1.1"
